--- a/shard.yml
+++ b/shard.yml
@@ -1,6 +1,10 @@
 name: crystal-tr
 version: 0.1.0
 
+dependencies:
+  kemal:
+    github: kemalcr/kemal
+
 authors:
   - sdogruyol <dogruyolserdar@gmail.com>
 
